--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -76,6 +76,10 @@ jobs:
         name: Checkout
         uses: actions/checkout@v6
       -
+        # Fix "fatal: detected dubious ownership in repository" error
+        name: Configure git
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
+      -
         name: Check composer.json
         run: composer --ansi --no-interaction validate --strict -- "$GITHUB_WORKSPACE/composer.json"
       -
