--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -77,11 +77,11 @@ jobs:
         uses: actions/checkout@v6
       -
         # Fix "fatal: detected dubious ownership in repository" error
-        name: Configure git
-        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
+        name: Configure repository
+        run: chown -R www-data:www-data "$GITHUB_WORKSPACE"
       -
         name: Check composer.json
-        run: composer --ansi --no-interaction validate --strict -- "$GITHUB_WORKSPACE/composer.json"
+        run: sudo -u www-data composer --ansi --no-interaction validate --strict -- "$GITHUB_WORKSPACE/composer.json"
       -
         name: Prepare package
         run: ln -s "$GITHUB_WORKSPACE" /app/packages/dark_mode_editor
